log/build_2024-12-08_14-49-51/py_pkg/stderr.log
  File "/home/user/ros2_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg/lidar_node.py", line 21
    		self.get_logger().info("lidar node initialized")``1q2
    		                                                  ^
SyntaxError: invalid decimal literal

